--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jehsjardim/Aula05SDMNoite0404#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "express": "^4.18.1"
   }
