--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "1. Após criar nosso repositório do gitHub...\r      - Abrir terminal (git bash) em uma pasta\r      - clonar o repositório nesta pasta  local por meio do comando:",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
